# mcp-mux

./: .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.js
cli/: Cargo.toml
docs/: api-reference.md  architecture.md  cli.md  enhancements.md  install-prompt.md  install.md  plugin-development.md  plugins.md  workspace-file-browser.md
public/: main.js  plugin-manager.js
registry/: registry.json
shared/: Cargo.toml
sidecar/: build.sh  sse-bridge.ts
src/: cloudflare-agent-bridge.js  index.html  plugin-manager.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: setup-integrations.ps1  setup-integrations.sh
src-tauri/src/: auth.rs  commands.rs  desktop_relay.rs  first_party_ai.rs  http_server.rs  main.rs  mcp.rs  mcp_prompts.rs  mcp_registry_tools.rs  mcp_session.rs  mcp_tools.rs  plugin.rs  registry.rs  renderer_scanner.rs  review.rs  session.rs  state.rs  test_utils.rs  tool_cache.rs
src-tauri/src/mcp_tools/: builtin_registry.rs  discovery.rs  lifecycle.rs  plugin_proxy.rs  presentation.rs  session.rs
tests/: decision-handlers-setup.js  decision-handlers.test.js  drawer-stack-setup.js  drawer-stack.test.js  main-session-routing.test.js  rich-content-embeds-setup.js  rich-content-embeds.test.js  setup.js  shared-mcpview-setup.js  structured-data-renderer-setup.js  structured-data-renderer.test.js  structured-data-utils.test.js  suggestion-widgets-setup.js  suggestion-widgets.test.js  (+9 more)
(+43 files in other folders)
