[package]
name = "mcp-mux"
version = "0.1.0"
edition = "2021"
description = "Rich display for AI agents"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
mcp-mux-shared = { path = "../shared" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
